FIX: Remove Overflow

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,10 +1,3 @@
-body{
-    font-family: "Open Sans", Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 500;
-    line-height: 1.1;
-    padding: 5px;
-}
-
 .nav-bar{
     position: relative;
     display: flex;
@@ -12,6 +5,9 @@ body{
     width: 100%; 
     margin-bottom: 5px;
     float: left;
+    font-family: "Open Sans", Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    line-height: 1.1;
 }
 .left-section{
     position: relative;
